--- a/UrlShortener/Views/Home/Details.cshtml
+++ b/UrlShortener/Views/Home/Details.cshtml
@@ -1,14 +1,12 @@
 ﻿@model UrlShortener.Models.UrlInfoViewModel
 
 @{
-    ViewData["Title"] = "UrlInfo";
+    ViewData["Title"] = "Информация о короткой ссылке";
 }
 
-<h1>UrlInfo</h1>
+<h1>@ViewData["Title"]</h1>
 
 <div>
-    <h4>UrlInfoViewModel</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.LongUrl)
