Добавлена работа с БД.

--- a/UrlShortener/Views/Shared/DisplayTemplates/NewWindowUrl.cshtml
+++ b/UrlShortener/Views/Shared/DisplayTemplates/NewWindowUrl.cshtml
@@ -1,1 +1,2 @@
-﻿<a href="@ViewData.Model" target="_blank">@ViewData.TemplateInfo.FormattedModelValue</a>
+﻿@* Шаблон открытия ссылки в новом окне *@
+<a href="@ViewData.Model" target="_blank">@ViewData.TemplateInfo.FormattedModelValue</a>
