Подсчет переходов по ссылкам. Осмысление Entity Framework.

--- a/UrlShortener/Views/Home/Create.cshtml
+++ b/UrlShortener/Views/Home/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model UrlShortener.Models.UrlViewModel
+﻿@model UrlShortener.Models.UrlModel
 
 @{
     ViewData["Title"] = "Создание короткой ссылки";
