--- a/UrlShortener/Views/Home/Details.cshtml
+++ b/UrlShortener/Views/Home/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model UrlShortener.Models.UrlInfoViewModel
+﻿@model UrlShortener.Models.UrlInfoModel
 
 @{
     ViewData["Title"] = "Информация о короткой ссылке";
