--- a/UrlShortener/Views/Home/Index.cshtml
+++ b/UrlShortener/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<UrlShortener.Models.UrlInfoViewModel>
+﻿@model IEnumerable<UrlShortener.Models.IndexModel>
 
 @{
     ViewData["Title"] = "Home Page";
@@ -7,18 +7,21 @@
 <div class="text-center">
     <table class="table">
         <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.LongUrl)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ShortUrl)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Created)
-            </th>
-            <th></th>
-        </tr>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.LongUrl)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ShortUrl)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Created)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.RedirectCount)
+                </th>
+                <th />
+            </tr>
         </thead>
         <tbody>
         @foreach (var item in Model)
@@ -32,6 +35,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Created)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RedirectCount)
                 </td>
                 <td>
                     @Html.ActionLink("Details", "Details", new {id = item.Id}) 
